<resources>
    <string name="app_name">EnadeDb</string>
    <string name="Email">E-mail</string>
    <string name="Nome">Nome</string>
    <string name="LastName">Sobrenome</string>
    <string name="ConfSenha">Confirmar Senha</string>
    <string name="Course">Curso</string>
    <string name="newUser">Criar usuário</string>
    <string name="Login">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="InstEnsi">Instituição de ensino</string>
    <string name="Exinst">Instituição de ensino</string>
    <string name="btCadastrar">Cadastrar</string>
    <string name="confirmar">Confirmar</string>
    <string name="btAlternativas">alternativas</string>
    <string name="btProx">proxima</string>
    <string name="Senha">Senha</string>
    <string name="Galeria">Escolher foto da galeria</string>
    <string name="Camera">Tirar foto</string>
    <string name="historico">Suas ultimas partidas</string>
    <string name="endGame">Você terminou as questões</string>
    <string name="score">Você acertou:</string>
    <string name="card1">Ano da prova: </string>
    <string name="card2">"Respondida em: "</string>

    <string-array name="cursos">
        <item>Curso</item>
        <item>Bach Sistemas de Informação</item>
        <item>Bach Ciência da Computação</item>
        <item>Eng computação</item>
    </string-array>

    <string-array name="grupo_1">
        <item>2004</item>
        <item>2007</item>
        <item>2010</item>
        <item>2013</item>
    </string-array>

    <string-array name="grupo_2">
        <item>2005</item>
        <item>2008</item>
        <item>2011</item>
        <item>2014</item>
        <item>2017</item>
    </string-array>

    <string-array name="grupo_3">
        <item>2006</item>
        <item>2009</item>
        <item>2012</item>
        <item>2015</item>
    </string-array>


    <string name="question" translatable="false">Em janeiro de 2016, entrou em vigor a Lei Brasileira
                            de Inclusão da Pessoa com Deficiência (LBI),
                            instrumento que garante mais direitos às pessoas
                            com deficiência e prevê punições para atos de
                            discriminação. A Lei destaca a importância de
                            estratégias de inclusão e de superação de barreiras
                            oriundas de deficiência.
                            Um exemplo de superação e inclusão é a atuação
                            do atleta paralímpico Daniel Dias. O nadador, que
                            nasceu no dia 24 de maio de 1988, sem partes de
                            alguns membros, conquistou, aos 28 anos de idade,
                            sua 24ª medalha, das quais 14 de ouro, sendo nove
                            conquistadas nas Paralímpiadas do Rio de Janeiro.
                            Orgulho para os brasileiros.
                            Considerando o texto apresentado, avalie as
                            afirmações a seguir, relativas à inclusão de pessoas
                            com deficiência.
                            \nI. O esporte, para ser inclusivo, requer prática
                            orientada para cada tipo de deficiência.
                            \nII. Na prática esportiva orientada, metas e
                            objetivos são estabelecidos como ferramentas
                            motivacionais a fim de promover ganhos
                            motores e cognitivos à pessoa com deficiência.
                            \nIII. A LBI foi fundamental para a inclusão de
                            Daniel Dias, que se tornou o melhor nadador
                            paralímpico da história.
    </string>


    <string name="title_activity_act_alternativa" translatable="false">actAlternativa</string>
    <string name="title_activity_act_main_menu" translatable="false">actMainMenu</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="Menu">Menu principal</string>
    <string name="update">Atualizar informações</string>
    <string name="btupdate">Atualizar</string>
    <string name="hintPass">Senha (minimo 6 letras/digitos)</string>
    <string name="prova">Prova</string>
    <string name="Gabarito">Gabarito</string>
    <string name="atualizar">Atualizar dados</string>
    <string name="pdf">Baixar PDF</string>
    <string name="Responder">Responder</string>
    <string name="Histórico">Histórico</string>
    <string name="Sair">Sair</string>
    <string name="pessoal">Pessoal</string>
    <string name="provas">Provas</string>
    <string name="loadingLogin">Efetuando login...</string>
    <string name="erroLogin">Email e/ou senha incorreto</string>
    <string name="finalizar">Finalizar</string>
    <string name="visualizar">Visualizar</string>
    <string name="selecione">Selecione uma alternativa</string>
    <string name="title">Resolução de prova</string>
    <string name="iniciar">Iniciar</string>
    <string name="btPrev">Anterior</string>
    <string name="Toatfirst">Esta é a primeira questão</string>
    <string name="DescNext">Passa para proxima questão</string>
    <string name="DescPrev">retorna para questão anterior</string>
    <string name="DescMenu">Voltar para o menu principal</string>
    <string name="de">das</string>
    <string name="Questões">questões</string>
    <string name="finish">Download Concluido</string>
    <string name="reset">Resetar senha</string>
    <string name="primeira">Esta é a primeira questão</string>
    <string name="getUserInfo">Recuperando informações</string>


</resources>
